fix: overscroll bg aligned with mobile app bg

--- a/app/globals.css
+++ b/app/globals.css
@@ -100,6 +100,7 @@
 
 html {
   scroll-behavior: smooth;
+  background: #111111;
 }
 
 body {
